// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkAppElement > should always disable block out options for element screenshots 1`] = `
[
  {
    "actualBase64Image": undefined,
    "isNativeContext": true,
    "isViewPortScreenshot": false,
    "options": {
      "compareOptions": {
        "method": {
          "ignoreAlpha": false,
          "ignoreAntialiasing": false,
          "ignoreColors": false,
          "ignoreLess": false,
          "ignoreNothing": false,
          "rawMisMatchPercentage": false,
          "returnAllCompareData": false,
          "saveAboveTolerance": 0,
          "scaleImagesToSameSize": false,
        },
        "wic": {
          "blockOutSideBar": false,
          "blockOutStatusBar": false,
          "blockOutToolBar": false,
          "createJsonReportFiles": false,
          "diffPixelBoundingBoxProximity": 5,
          "ignoreAlpha": false,
          "ignoreAntialiasing": false,
          "ignoreColors": false,
          "ignoreLess": false,
          "ignoreNothing": false,
          "rawMisMatchPercentage": false,
          "returnAllCompareData": false,
          "saveAboveTolerance": 0,
          "scaleImagesToSameSize": false,
        },
      },
      "devicePixelRatio": 2,
      "deviceRectangles": {
        "bottomBar": {
          "height": 0,
          "width": 390,
          "x": 0,
          "y": 800,
        },
        "homeBar": {
          "height": 34,
          "width": 390,
          "x": 0,
          "y": 780,
        },
        "leftSidePadding": {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "rightSidePadding": {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "screenSize": {
          "height": 844,
          "width": 390,
        },
        "statusBar": {
          "height": 47,
          "width": 390,
          "x": 0,
          "y": 0,
        },
        "statusBarAndAddressBar": {
          "height": 47,
          "width": 390,
          "x": 0,
          "y": 0,
        },
        "viewport": {
          "height": 733,
          "width": 390,
          "x": 0,
          "y": 47,
        },
      },
      "fileName": "test-element.png",
      "folderOptions": {
        "actualFolder": "/test/actual",
        "autoSaveBaseline": false,
        "baselineFolder": "/test/baseline",
        "browserName": "Chrome",
        "deviceName": "iPhone 14",
        "diffFolder": "/test/diff",
        "isMobile": true,
        "savePerInstance": true,
      },
      "isAndroid": false,
      "isAndroidNativeWebScreenshot": false,
      "isHybridApp": false,
      "platformName": "iOS",
    },
    "testContext": {
      "commandName": "checkElement",
      "framework": "vitest",
      "instanceData": {
        "app": "TestApp",
        "browser": {
          "name": "Chrome",
          "version": "118.0.0.0",
        },
        "deviceName": "iPhone 14",
        "isAndroid": false,
        "isIOS": true,
        "isMobile": true,
        "platform": {
          "name": "iOS",
          "version": "17.0",
        },
      },
      "parent": "test suite",
      "tag": "test-tag",
      "title": "test title",
    },
  },
]
`;

exports[`checkAppElement > should execute checkAppElement with basic options 1`] = `
{
  "fileName": "test-result.png",
  "isAboveTolerance": false,
  "isExactSameImage": true,
  "isNewBaseline": false,
  "misMatchPercentage": 0,
}
`;

exports[`checkAppElement > should execute checkAppElement with basic options 2`] = `
[
  {
    "browserInstance": {
      "isAndroid": false,
    },
    "element": {
      "selector": "#test-element",
    },
    "folders": {
      "actualFolder": "/test/actual",
      "baselineFolder": "/test/baseline",
      "diffFolder": "/test/diff",
    },
    "instanceData": {
      "appName": "TestApp",
      "browserName": "Chrome",
      "browserVersion": "118.0.0.0",
      "deviceName": "iPhone 14",
      "devicePixelRatio": 2,
      "deviceRectangles": {
        "bottomBar": {
          "height": 0,
          "width": 390,
          "x": 0,
          "y": 800,
        },
        "homeBar": {
          "height": 34,
          "width": 390,
          "x": 0,
          "y": 780,
        },
        "leftSidePadding": {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "rightSidePadding": {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "screenSize": {
          "height": 844,
          "width": 390,
        },
        "statusBar": {
          "height": 47,
          "width": 390,
          "x": 0,
          "y": 0,
        },
        "statusBarAndAddressBar": {
          "height": 47,
          "width": 390,
          "x": 0,
          "y": 0,
        },
        "viewport": {
          "height": 733,
          "width": 390,
          "x": 0,
          "y": 47,
        },
      },
      "initialDevicePixelRatio": 2,
      "isAndroid": false,
      "isIOS": true,
      "isMobile": true,
      "logName": "test-log",
      "name": "test-device",
      "nativeWebScreenshot": false,
      "platformName": "iOS",
      "platformVersion": "17.0",
    },
    "isNativeContext": true,
    "saveElementOptions": {
      "method": {},
      "wic": {
        "addIOSBezelCorners": false,
        "addressBarShadowPadding": 6,
        "alwaysSaveActualImage": true,
        "autoElementScroll": true,
        "autoSaveBaseline": false,
        "clearFolder": false,
        "compareOptions": {
          "blockOutSideBar": false,
          "blockOutStatusBar": false,
          "blockOutToolBar": false,
          "createJsonReportFiles": false,
          "diffPixelBoundingBoxProximity": 5,
          "ignoreAlpha": false,
          "ignoreAntialiasing": false,
          "ignoreColors": false,
          "ignoreLess": false,
          "ignoreNothing": false,
          "rawMisMatchPercentage": false,
          "returnAllCompareData": false,
          "saveAboveTolerance": 0,
          "scaleImagesToSameSize": false,
        },
        "disableBlinkingCursor": false,
        "disableCSSAnimation": false,
        "enableLayoutTesting": false,
        "enableLegacyScreenshotMethod": false,
        "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
        "fullPageScrollTimeout": 1500,
        "hideScrollBars": true,
        "isHybridApp": false,
        "savePerInstance": true,
        "tabbableOptions": {
          "circle": {
            "backgroundColor": "rgba(255, 0, 0, 0.4)",
            "borderColor": "rgba(255, 0, 0, 1)",
            "borderWidth": 1,
            "fontColor": "rgba(0, 0, 0, 1)",
            "fontFamily": "Arial",
            "fontSize": 10,
            "size": 10,
          },
          "line": {
            "color": "rgba(255, 0, 0, 1)",
            "width": 1,
          },
        },
        "toolBarShadowPadding": 6,
        "userBasedFullPageScreenshot": false,
        "waitForFontsLoaded": true,
      },
    },
    "tag": "test-element",
  },
]
`;

exports[`checkAppElement > should handle Android device correctly 1`] = `
[
  {
    "actualBase64Image": undefined,
    "isNativeContext": true,
    "isViewPortScreenshot": false,
    "options": {
      "compareOptions": {
        "method": {
          "ignoreAlpha": false,
          "ignoreAntialiasing": false,
          "ignoreColors": false,
          "ignoreLess": false,
          "ignoreNothing": false,
          "rawMisMatchPercentage": false,
          "returnAllCompareData": false,
          "saveAboveTolerance": 0,
          "scaleImagesToSameSize": false,
        },
        "wic": {
          "blockOutSideBar": false,
          "blockOutStatusBar": false,
          "blockOutToolBar": false,
          "createJsonReportFiles": false,
          "diffPixelBoundingBoxProximity": 5,
          "ignoreAlpha": false,
          "ignoreAntialiasing": false,
          "ignoreColors": false,
          "ignoreLess": false,
          "ignoreNothing": false,
          "rawMisMatchPercentage": false,
          "returnAllCompareData": false,
          "saveAboveTolerance": 0,
          "scaleImagesToSameSize": false,
        },
      },
      "devicePixelRatio": 2,
      "deviceRectangles": {
        "bottomBar": {
          "height": 0,
          "width": 390,
          "x": 0,
          "y": 800,
        },
        "homeBar": {
          "height": 34,
          "width": 390,
          "x": 0,
          "y": 780,
        },
        "leftSidePadding": {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "rightSidePadding": {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "screenSize": {
          "height": 844,
          "width": 390,
        },
        "statusBar": {
          "height": 47,
          "width": 390,
          "x": 0,
          "y": 0,
        },
        "statusBarAndAddressBar": {
          "height": 47,
          "width": 390,
          "x": 0,
          "y": 0,
        },
        "viewport": {
          "height": 733,
          "width": 390,
          "x": 0,
          "y": 47,
        },
      },
      "fileName": "test-element.png",
      "folderOptions": {
        "actualFolder": "/test/actual",
        "autoSaveBaseline": false,
        "baselineFolder": "/test/baseline",
        "browserName": "Chrome",
        "deviceName": "Pixel 4",
        "diffFolder": "/test/diff",
        "isMobile": true,
        "savePerInstance": true,
      },
      "isAndroid": true,
      "isAndroidNativeWebScreenshot": false,
      "isHybridApp": false,
      "platformName": "Android",
    },
    "testContext": {
      "commandName": "checkElement",
      "framework": "vitest",
      "instanceData": {
        "app": "TestApp",
        "browser": {
          "name": "Chrome",
          "version": "118.0.0.0",
        },
        "deviceName": "Pixel 4",
        "isAndroid": true,
        "isIOS": false,
        "isMobile": true,
        "platform": {
          "name": "Android",
          "version": "11.0",
        },
      },
      "parent": "test suite",
      "tag": "test-tag",
      "title": "test title",
    },
  },
]
`;
